Converted listNotUsedForFormatting to Selenium

--- a/test/assessmentSpecs/specs/listNotUsedForFormatting/listNotUsedForFormatting.html
+++ b/test/assessmentSpecs/specs/listNotUsedForFormatting/listNotUsedForFormatting.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 	<div data-expected="fail">
-		<ol class="quail-failed-element">
+		<ol id="assert-1" class="quail-failed-element">
 			<li>Item text</li>
 		</ol>
 	</div>
 	<div data-expected="pass">
 
-		<ol>
+		<ol id="assert-2">
 			<li>Item text 1</li>
 			<li>Item text 2</li>
 		</ol>
