Converted newWindowIsOpened to Selenium

--- a/test/assessmentSpecs/specs/newWindowIsOpened/newWindowIsOpened.html
+++ b/test/assessmentSpecs/specs/newWindowIsOpened/newWindowIsOpened.html
@@ -7,7 +7,7 @@
   <div data-expected="fail">
     <p>
       <a id="product" href="products.html" onclick="window.open('products.html');" class="quail-failed-element">
-        <img src="../assets/go.gif" alt="" />
+        <img src="assets/go.gif" alt="" />
       </a>
     </p>
   </div>
