Converted preShouldNotBeUsedForTabularLayout to Selenium

--- a/test/assessmentSpecs/specs/preShouldNotBeUsedForTabularLayout/preShouldNotBeUsedForTabularLayout.html
+++ b/test/assessmentSpecs/specs/preShouldNotBeUsedForTabularLayout/preShouldNotBeUsedForTabularLayout.html
@@ -6,14 +6,14 @@
 <body>
 	<div data-expected="fail">
 
-		<pre class="quail-failed-element">
+		<pre id="assert-1" class="quail-failed-element">
      dogs  cats
 big	  2     4
 small 5     7
 		</pre>
 	</div>
 	<div data-expected="pass">
-		<pre>No table here</pre>
+		<pre id="assert-2">No table here</pre>
 	</div>
 
   </body>
