Converted selectJumpMenu to Selenium

--- a/test/assessmentSpecs/specs/selectJumpMenu/selectJumpMenu.html
+++ b/test/assessmentSpecs/specs/selectJumpMenu/selectJumpMenu.html
@@ -6,7 +6,7 @@
 <body>
   <div data-expected="fail">
     <form>
-      <select id="jumpie" name="jumpie" onchange="MM_jumpMenu('parent',this,1);" class="quail-failed-element">
+      <select id="assert-1" name="jumpie" onchange="MM_jumpMenu('parent',this,1);" class="quail-failed-element">
         <option value="home.html">Home</option>
         <option value="rex.html">Rex</option>
       </select>
@@ -15,7 +15,7 @@
 
   <div data-expected="pass">
     <form>
-      <select id="jumpie" name="jumpie">
+      <select id="assert-2" name="jumpie">
         <option value="home.html">Home</option>
         <option value="rex.html">Rex</option>
       </select>
