Converted siteMap to Selenium

--- a/test/assessmentSpecs/specs/siteMap/siteMap.html
+++ b/test/assessmentSpecs/specs/siteMap/siteMap.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html>
+<html id="assert-1">
 <head>
-	<title>siteMap</title>
+  <title>siteMap</title>
 </head>
 <body>
-	<div class="quail-test self-fail" data-expected="fail">
-		<p>
-			This document is part of a large collection of related documents.
-		</p>
-	</div>
-	<div data-expected="pass">
-		<a href="sitemap.html">Site Map</a>
+  <div class="quail-test self-fail" data-expected="fail">
+    <p>
+      This document is part of a large collection of related documents.
+    </p>
+  </div>
+  <div data-expected="pass">
+    <a href="sitemap.html">Site Map</a>
 
-		<p>
-			This document is part of a large collection of related documents.
-		</p>
-	</div>
+    <p>
+      This document is part of a large collection of related documents.
+    </p>
+  </div>
 
   </body>
 </html>
