--- a/test/assessmentSpecs/specs/skipToContentLinkProvided/skipToContentLinkProvided-pass-2.html
+++ b/test/assessmentSpecs/specs/skipToContentLinkProvided/skipToContentLinkProvided-pass-2.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <div data-expected="pass">
-      <a id="assert-1" href="#content3">Skip to content</a>
-      <div id="content3">
+      <a id="assert-1" href="#content4" id="focus-visible">Skip to content</a>
+      <div id="content4">
         This is the main page content.
       </div>
     </div>
