--- a/test/assessmentSpecs/specs/skipToContentLinkProvided/skipToContentLinkProvided-fail.html
+++ b/test/assessmentSpecs/specs/skipToContentLinkProvided/skipToContentLinkProvided-fail.html
@@ -15,9 +15,9 @@
       </style>
   </head>
   <body>
-    <div data-expected="pass">
-      <a id="assert-1" href="#content3">Skip to content</a>
-      <div id="content3">
+    <div data-expected="fail">
+      <a id="assert-1" href="somewhere.html">Somewhere else</a>
+      <div id="content1">
         This is the main page content.
       </div>
     </div>
