Converted whiteSpaceInWord to Selenium

--- a/test/assessmentSpecs/specs/whiteSpaceInWord/whiteSpaceInWord.html
+++ b/test/assessmentSpecs/specs/whiteSpaceInWord/whiteSpaceInWord.html
@@ -5,15 +5,15 @@
 </head>
 <body>
   <div data-expected="fail">
-    <h4 class="quail-failed-element">H E L L O T H E R E</h4>
+    <h4 id="assert-1">H E L L O T H E R E</h4>
   </div>
 
   <div data-expected="fail">
-    <h4 class="quail-failed-element">H&nbsp;E&nbsp;L&nbsp;L&nbsp;O T&nbsp;H&nbsp;E&nbsp;R&nbsp;E</h4>
+    <h4 id="assert-2">H&nbsp;E&nbsp;L&nbsp;L&nbsp;O T&nbsp;H&nbsp;E&nbsp;R&nbsp;E</h4>
   </div>
 
   <div data-expected="pass">
-    <h4>Hello there</h4>
+    <h4 id="assert-3">Hello there</h4>
   </div>
 
   </body>
