Converted whiteSpaceNotUsedForFormatting to Selenium

--- a/test/assessmentSpecs/specs/whiteSpaceNotUsedForFormatting/whitespaceNotUsedForFormatting.html
+++ b/test/assessmentSpecs/specs/whiteSpaceNotUsedForFormatting/whitespaceNotUsedForFormatting.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div data-expected="pass">
-      <p>This is a paragraph that is just a normal text element.</p>
+      <p id="assert-1">This is a paragraph that is just a normal text element.</p>
     </div>
 
     <div data-expected="fail">
-      <p>Item &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Price<br/>
+      <p id="assert-2">Item &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Price<br/>
          A &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $4<br/>
          B &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $30<br/>
          C &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $.34
