Removed link to YouTube v2 api #381

--- a/test/accessibility-tests/videosEmbeddedOrLinkedNeedCaptions.html
+++ b/test/accessibility-tests/videosEmbeddedOrLinkedNeedCaptions.html
@@ -70,7 +70,7 @@
     </object>
   </div>
 
-  <div class="quail-test" data-expected="pass" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
+  <div class="quail-test" data-expected="cantTell" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
     <p>
       Hey, check
       <a href="http://youtube.com/watch?v=zJOS0sV2a24">Out this awesome video.</a>
