--- a/test/assessmentSpecs/specs/checkboxHasLabel/checkboxHasLabel.html
+++ b/test/assessmentSpecs/specs/checkboxHasLabel/checkboxHasLabel.html
@@ -35,7 +35,7 @@
       </p>
     </form>
   </div>
-  <div data-expected="fail">
+  <div data-expected="pass">
       <form action="http://somesite.com/prog/adduser" method="post">
           <p>
               <label>
@@ -49,7 +49,7 @@
     <form action="http://somesite.com/prog/adduser" method="post">
       <p>
         <label for="assert-6">birds</label>
-        <input id="assert-6" id="boxa" type="checkbox" name="mytext" tabindex="1" />
+        <input id="assert-6" type="checkbox" name="mytext" tabindex="1" />
       </p>
     </form>
   </div>
