Removing calls to jQuery

--- a/test/assessmentSpecs/specs/linkHasAUniqueContext/linkHasAUniqueContext.html
+++ b/test/assessmentSpecs/specs/linkHasAUniqueContext/linkHasAUniqueContext.html
@@ -11,8 +11,8 @@
 
   <div data-expected="pass">
     <!-- Different link content -->
-    <a id="assert-1" href="dogs">Doglss!</a>
-    <a id="assert-2" href="cats">Cats!</a>
+    <a id="assert-1" href="dogs">aaa</a>
+    <a id="assert-2" href="cats">bbb</a>
   </div>
 
   <div data-expected="pass">
